package(default_visibility = ["//visibility:public"])

cc_library(
    name = "grid_map_core",
    srcs = glob([
        "src/*.cpp",
        "src/iterators/*.cpp",
    ]),
    hdrs = glob([
        "include/**/*.h",
        "include/**/*.hpp",
    ]),
    strip_include_prefix = "include",
    deps = [
        "@eigen",
    ],
)
