package(default_visibility = ["//visibility:public"])

cc_library(
    name = "test_helpers",
    srcs = ["test_helpers.cpp"],
    hdrs = ["test_helpers.hpp"],
    deps = [
        "//grid_map_core",
        "@gtest",
    ],
)

cc_test(
    name = "test_grid_map_core",
    srcs = [
        "CubicConvolutionInterpolationTest.cpp",
        "CubicInterpolationTest.cpp",
        "EllipseIteratorTest.cpp",
        "GridMapIteratorTest.cpp",
        "GridMapMathTest.cpp",
        "GridMapTest.cpp",
        "LineIteratorTest.cpp",
        "PolygonIteratorTest.cpp",
        "PolygonTest.cpp",
        "SlidingWindowIteratorTest.cpp",
        "SpiralIteratorTest.cpp",
        "SubmapIteratorTest.cpp",
        "test_grid_map_core.cpp",
    ],
    deps = [
        ":test_helpers",
        "//grid_map_core",
        "@gtest",
    ],
)
